# scan-simulator

./: .gitignore  DEMO.md  LICENSE  README.md  pyproject.toml  showcase.py
scan_simulator/: __init__.py  __main__.py  config.py  pipeline.py  presets.py
scan_simulator/transforms/: __init__.py  base.py  camera.py  damage.py  drawing.py  paper.py  scanner.py
tests/: test_transforms.py
